# auto-eval-agent-fw

./: .env  .env.example  .gitignore  AGENTS_OVERVIEW.md  CHANGELOG.md  agent_evaluation_proposal_v3.0.md  arch.md  code_reader_agent_testing.md  flow_engine_testing.md  pyproject.toml  step4_monitoring_implementation_guide.md
.claude/agents/: architecture-flow-analyzer.md
.claude/commands/: arch-flow.md
agent_evaluation_framework.egg-info/: SOURCES.txt  requires.txt
config/: __init__.py
results/2026-05-13_142046/: report.json
src/: __init__.py  agent_client.py  cli.py  code_reader_agent.py  llm_judge.py  orchestrator.py
src/agent_evaluation_framework.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/data/: loader.py  writer.py
src/dataset_tool/: __init__.py  drafter.py  interactive.py  pipeline.py  stats.py  validator.py
src/evaluation/: base.py  conflict_detection.py  grammar_correction.py  output_quality.py  summary_accuracy.py  system_stability.py
src/flow_engine/: ARCHITECTURE.md  __init__.py  agents.py  example_flow.py  runtime.py  types.py
src/interactive_runtime/: ARCHITECTURE.md  __init__.py  example.py  example_skills.py  handlers.py  session.py  tools.py
src/models/: agent_response.py  dataset_draft.py  evaluation_result.py  monitoring.py  test_data.py
src/monitoring/: __init__.py  dashboard.py  metrics.py
src/reporting/: chart_builder.py  report_generator.py  score_calculator.py
test_data/anomaly/: anomaly_cases.json
test_data/incremental/: incremental_sequences.json
test_data/standard/: standard_samples.json
